--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:i.simevski@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/igorsimevski">github.com/igorsimevski</a></li>
+	        		<li><a href="mailto:i.simevski@gmail.com">e-mail</a></li>
+	        		<li><a href="https://github.com/igorsimevski">GitHub</a></li>
 				</ul>
 			</footer>
 		</body>
