--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Helvetica', 'Arial';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -21,11 +21,11 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Helvetica', 'Arial';
 }
 p {
     font-size: 1em;
-    font-family:'Helvetica';
+    font-family:'Helvetica', 'Arial';
     line-height: 1.4em;
     color: #333;
 }
