--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    color: #333;
 }
 a {
     text-decoration: none;
