--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ nav ul li, footer ul {
     display: inline;
     margin-right: 20px;
 }
-ul,li {
+ul, li, p {
     color: #333;
 }
 a {
@@ -28,7 +28,6 @@ h1 {
 p {
     font-size: 1em;
     line-height: 1.4em;
-    color: #333;
 }
 footer {
     border-top: 1px solid #d5d5d5;
