--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
-ul.projects li {
+ul.default-list li {
     line-height: 1.5em;
     margin-bottom: 8px;
 }
