--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,6 @@ ul.default-list li {
 ul.single-line li {
     margin-bottom: 4px;
 }
-div.profile-image {
-  height: 200px;
-  width: 100%;
+div.profile-image img {
+  width: 100px;
 }
