--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -37,7 +37,7 @@
         {% endfor %}
 
     </div>
-    <a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">
+    <!--<a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
@@ -45,4 +45,5 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+    -->
 </div>
