--- a/_includes/sections/career.html
+++ b/_includes/sections/career.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="career.my_career">My Education</span></h1>
+            <h1><span data-i18n="career.my_education">My Education</span></h1>
         </div>
     </div>
     <div class="row features-block">
