--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,5 +1,5 @@
-//$link-color: #3385FF;
-$link-color: #6d1f1a;
+$link-color: #3385FF;
+//$link-color: #6d1f1a;
 
 .landing-page .carousel-caption {
   h1, p {
