--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,7 +1,7 @@
 $link-color: #3385FF;
 $success-color: #1c84c6;
 $warning-color: #f8ac59;
-$active-color: #0073b1;
+$active-color1: #0073b1;
 $light-gray1: #e7eaec;
 $light-gray2: #f3f3f4;
 $gray: #676a6c;
@@ -383,40 +383,40 @@ button.dim {
   border-color: $link-color;
   color: $white;
   &.active {
-    background-color: $active-color;
-    border-color: $active-color;
+    background-color: $active-color1;
+    border-color: $active-color1;
     color: $white;
     &:focus, &:hover {
-      background-color: $active-color;
-      border-color: $active-color;
+      background-color: $active-color1;
+      border-color: $active-color1;
       color: $white;
     }
   }
   &:active {
-    background-color: $active-color;
-    border-color: $active-color;
+    background-color: $active-color1;
+    border-color: $active-color1;
     color: $white;
     &:focus, &:hover {
-      background-color: $active-color;
-      border-color: $active-color;
+      background-color: $active-color1;
+      border-color: $active-color1;
       color: $white;
     }
   }
   &:focus, &:hover {
-    background-color: $active-color;
-    border-color: $active-color;
+    background-color: $active-color1;
+    border-color: $active-color1;
     color: $white;
   }
   &.active[disabled] {
-    background-color: $active-color;
-    border-color: $active-color;
+    background-color: $active-color1;
+    border-color: $active-color1;
   }
   &[disabled] {
-    background-color: $active-color;
-    border-color: $active-color;
+    background-color: $active-color1;
+    border-color: $active-color1;
     &:active, &:focus, &:hover {
-      background-color: $active-color;
-      border-color: $active-color;
+      background-color: $active-color1;
+      border-color: $active-color1;
     }
   }
 }
