--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2,6 +2,7 @@ $link-color: #3385FF;
 $success-color: #1c84c6;
 $warning-color: #f8ac59;
 $active-color1: #0073b1;
+$active-color2: #1a7bb9;
 $light-gray1: #e7eaec;
 $light-gray2: #f3f3f4;
 $gray: #676a6c;
@@ -426,28 +427,28 @@ button.dim {
   border-color: $success-color;
   color: $white;
   &.active {
-    background-color: #1a7bb9;
-    border-color: #1a7bb9;
+    background-color: $active-color2;
+    border-color: $active-color2;
     color: $white;
     &:focus, &:hover {
-      background-color: #1a7bb9;
-      border-color: #1a7bb9;
+      background-color: $active-color2;
+      border-color: $active-color2;
       color: $white;
     }
   }
   &:active {
-    background-color: #1a7bb9;
-    border-color: #1a7bb9;
+    background-color: $active-color2;
+    border-color: $active-color2;
     color: $white;
     &:focus, &:hover {
-      background-color: #1a7bb9;
-      border-color: #1a7bb9;
+      background-color: $active-color2;
+      border-color: $active-color2;
       color: $white;
     }
   }
   &:focus, &:hover {
-    background-color: #1a7bb9;
-    border-color: #1a7bb9;
+    background-color: $active-color2;
+    border-color: $active-color2;
     color: $white;
   }
   &.active[disabled] {
