--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
             <h1><span data-i18n="about_me.about_me">About Me</span></h1>
-            <p>The answer is out there, Neo. It's looking for you, and it will find you if you want it to.</p>
+            <!-- <p>The answer is out there, Neo. It's looking for you, and it will find you if you want it to.</p> -->
         </div>
     </div>
     <div class="row">
