--- a/_includes/category.html
+++ b/_includes/category.html
@@ -37,7 +37,7 @@ $(function(){
                                 <h2>{{ post.title }}</h2>
                             </a>
                             <div class="small m-b-xs">
-                                <strong>{{ site.author.name }}</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> {{ post.date | date: "%-d %b %Y" }}</span>
+                                <strong>{{ site.author.name }}</strong> <span class="text-muted"><i class="far fa-clock"></i> {{ post.date | date: "%-d %b %Y" }}</span>
                             </div>
                             <p>
                                 {{ post.content | strip_html | truncate:100 }}
@@ -53,7 +53,7 @@ $(function(){
                                     <div class="small text-right">
                                         <div>
                                             {% if site.disqus %}
-                                            <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span> comments
+                                            <i class="far fa-comments"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span> comments
                                             {% endif %}
                                         </div>
                                     </div>
