--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2642,7 +2642,7 @@ body {
   .social-icon a {
     background: $link-color;
     color: $white;
-    padding: 4px 8px;
+    padding-top: 5px;
     height: 28px;
     width: 28px;
     display: block;
