--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -6,7 +6,7 @@
     -->
     <div class="carousel-inner" role="listbox">
 
-        <div class="item active">
+        <div class="carousel-item active">
             <div class="container">
                 <div class="carousel-caption">
                 </div>
@@ -23,7 +23,7 @@
         </div>
 
         {% for banner in site.data.index.banners offset:1 %}
-        <div class="item">
+        <div class="carousel-item">
             <div class="container">
                 <div class="carousel-caption">
                 </div>
