--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -10,6 +10,13 @@ $gray: #676a6c;
 $white: #fff;
 //$link-color: #6d1f1a;
 
+.btn-xs {
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
+
 .landing-page .carousel-caption {
   h1, p {
     text-transform: uppercase;
@@ -178,7 +185,6 @@ h3, h4, h5 {
 }
 
 .navbar-fixed-top {
-  transition-duration: .4s;
   border-bottom: 1px solid $light-gray1 !important;
   z-index: 2030;
   background: $light-gray2;
@@ -255,7 +261,7 @@ body.canvas-menu .nav-header {
   }
 }
 
-.btn-default {
+.btn-secondary {
   &.active, &:active {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
   }
@@ -509,7 +515,7 @@ button.dim {
   }
 }
 
-.btn-default {
+.btn-secondary {
   color: inherit;
   background: $white;
   border: 1px solid $light-gray1;
@@ -527,7 +533,7 @@ button.dim {
   }
 }
 
-.btn-default {
+.btn-secondary {
   &.active {
     color: inherit;
     border: 1px solid #d2d2d2;
@@ -664,6 +670,7 @@ button.dim {
   }
 }
 
+// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
 .has-error .form-control:focus, .has-success .form-control:focus, .has-warning .form-control:focus, .navbar-collapse, .navbar-form {
   box-shadow: none;
 }
@@ -674,7 +681,7 @@ button.dim {
   }
 }
 
-.panel {
+.card {
   box-shadow: none;
 }
 
@@ -715,7 +722,7 @@ button {
       box-shadow: inset 0 0 0 #16987e, 0 2px 0 0 #16987e, 0 5px 3px #999;
     }
   }
-  &.btn-default.dim {
+  &.btn-secondary.dim {
     box-shadow: inset 0 0 0 #b3b3b3, 0 5px 0 0 #b3b3b3, 0 10px 5px #999;
     &:active {
       box-shadow: inset 0 0 0 #b3b3b3, 0 2px 0 0 #b3b3b3, 0 5px 3px #999;
@@ -811,7 +818,7 @@ button.dim:active:before {
   min-height: 200px;
 }
 
-.img-circle {
+.rounded-circle {
   border-radius: 50%;
 }
 
@@ -886,19 +893,21 @@ button.dim:active:before {
   border-color: $warning-color;
 }
 
+// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
 .has-error .form-control {
   border-color: #ed5565;
 }
 
-.has-success .control-label {
+.has-success .col-form-label {
   color: $link-color;
 }
 
-.has-warning .control-label {
+.has-warning .col-form-label {
   color: $warning-color;
 }
 
-.has-error .control-label {
+// Bootstrap 4: Replaced .has-error, .has-warning, and .has-success classes with HTML5 form validation via CSS’s :invalid and :valid pseudo-classes.
+.has-error .col-form-label {
   color: #ed5565;
 }
 
@@ -1303,7 +1312,7 @@ a {
   font-size: 12px;
 }
 
-.panel.blank-panel {
+.card.blank-card {
   background: 0 0;
   margin: 0;
 }
@@ -1444,26 +1453,6 @@ code {
 .navy-bg {
   background-color: $link-color;
   color: $white;
-}
-
-.panel-primary {
-  border-color: $link-color;
-}
-
-.panel-success {
-  border-color: $success-color;
-}
-
-.panel-info {
-  border-color: #23c6c8;
-}
-
-.panel-warning {
-  border-color: $warning-color;
-}
-
-.panel-title {
-  font-size: inherit;
 }
 
 .text-navy {
@@ -2523,11 +2512,11 @@ body {
   .carousel-caption {
     z-index: 10;
   }
-  .carousel .item {
+  .carousel .carousel-item {
     height: 78px;
     background-color: #777;
   }
-  .carousel-inner > .item > img {
+  .carousel-inner > .carousel-item > img {
     position: absolute;
     top: 0;
     left: 0;
@@ -2536,20 +2525,18 @@ body {
   }
   .carousel-fade {
     .carousel-inner {
-      .item {
+      .carousel-item {
         opacity: 0;
-        -webkit-transition-property: opacity;
-        transition-property: opacity;
       }
       .active {
         opacity: 1;
-        &.left, &.right {
+        &.carousel-item-left, &.carousel-item-right {
           left: 0;
           opacity: 0;
           z-index: 1;
         }
       }
-      .next.left, .prev.right {
+      .carousel-item-next.carousel-item-left, .carousel-item-prev.carousel-item-right {
         opacity: 1;
       }
     }
@@ -2558,7 +2545,7 @@ body {
     }
   }
   .carousel-control {
-    &.left, &.right {
+    &.carousel-item-left, &.carousel-item-right {
       background: 0 0;
     }
     width: 6%;
