added unique ids

--- a/_includes/sections/career.html
+++ b/_includes/sections/career.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row features-block">
         <div class="col-lg-12">
-            <div id="vertical-timeline" class="vertical-container light-timeline center-orientation">
+            <div id="vertical-timeline2" class="vertical-container light-timeline center-orientation">
             {% for career in site.data.index.educations %}
             {% assign loopindex = forloop.index | modulo: 2 %}
                 <div class="vertical-timeline-block">
