--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -24,23 +24,23 @@
                 <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
-                    <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://github.com/{{ site.author.github_username }}" target="blank" aria-label="Go to Github"><i class="fab fa-github"></i></a></li>
                     {% endif %}
                     {% if site.author.linkedin_id %}
-                    <li><a href="https://www.linkedin.com/in/{{ site.author.linkedin_id }}" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/{{ site.author.linkedin_id }}" target="blank" aria-label="Go to LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
                     {% endif %}
                     {% if site.author.facebook_username %}
-                    <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank" aria-label="Go to Facebook"><i class="fab fa-facebook-f"></i></a></li>
                     {% endif %}
                     {% if site.author.twitter_username %}
-                    <li><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank" aria-label="Go to Twitter"><i class="fab fa-twitter"></i></a></li>
                     {% endif %}
                     {% if site.author.email %}
-                    <li><a href="mailto:{{ site.author.email }}"><i class="far fa-envelope"></i></a></li>
+                    <li><a href="mailto:{{ site.author.email }}" aria-label="Write Mail"><i class="far fa-envelope"></i></a></li>
                     {% endif %}
-                    <li><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fas fa-rss"></i></a></li>
+                    <li><a href="{{ site.baseurl }}/feed.xml" target="blank" aria-label="Go to Feed"><i class="fas fa-rss"></i></a></li>
                     {% if site.author.cv %}
-                    <li><a href="{{ site.author.cv }}" target="blank"><i class="fas fa-file-pdf"></i></a></li>
+                    <li><a href="{{ site.author.cv }}" target="blank" aria-label="View CV"><i class="fas fa-file-pdf"></i></a></li>
                     {% endif %}
                 </ul>
             </div>
