added meta description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   {% endif %}
   <meta name="author" content="{{ site.author.name }}">
   <meta name="baseurl" content="{{ site.baseurl }}">
+  <meta name="Description" content="{{ site.author.name }}'s personal website. Enjoy!">
 
   <title>
     {% if page.title != "index" %}
