moved css to body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@ layout: compress
 
 <body id="page-top" class="landing-page">
 
+    <!-- favicon -->
+    <link async rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+
     <!-- Main CSS -->
     <link async href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
     <link async href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
