moved scripts to body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,25 +5,33 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en">
 
-    {% if page.title != 'index' %}
-        {% include head.html %}
-    {% else %}
-        {% include index_head.html %}
-    {% endif %}
+  {% if page.title != 'index' %}
+    {% include head.html %}
+  {% else %}
+    {% include index_head.html %}
+  {% endif %}
 
 <body id="page-top" class="landing-page">
 
-    {% if page.title != 'index' %}
-        {% include blog_header.html %}
-    {% endif %}
+    <!-- Main scripts -->
+  <script src="{{ "/static/assets/app-20190619.min.js" | prepend: site.baseurl }}"></script>
+  {% if site.data.index.projects %}
+  <script async defer src="{{ "/static/js/github_api.min.js" | prepend: site.baseurl }}"></script>
+  {% endif %}
+  {% if site.data.index.language %}
+  <script src="{{"/static/assets/i18-20190619.min.js"| prepend: site.baseurl }}"></script>
+  {% endif %}
+  {% if page.title != 'index' %}
+    {% include blog_header.html %}
+  {% endif %}
 
-    {{ content }}
+  {{ content }}
 
-    {% if page.title != 'index' %}
-        {% include foot.html %}
-    {% else %}
-        {% include index_foot.html %}
-    {% endif %}
+  {% if page.title != 'index' %}
+    {% include foot.html %}
+  {% else %}
+    {% include index_foot.html %}
+  {% endif %}
 
 </body>
 </html>
