fixing scripts position in html

--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -44,3 +44,7 @@
 {% if site.blog_carousel %}
 {% include carousel.html %}
 {% endif %}
+
+
+<!-- Main Scripts -->
+<script src="{{"/static/assets/blog-20190619.min.js"| prepend: site.baseurl }}"></script>
