--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ layout: compress
   {% if site.data.index.language %}
   <script src="{{"/static/assets/i18-20190619.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
-  <script async defer src="{{"/static/js/skills.js"| prepend: site.baseurl }}"></script>
+  <script src="{{"/static/js/skills.js"| prepend: site.baseurl }}"></script>
 
 </body>
 </html>
