added auto width

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2513,7 +2513,7 @@ body {
   }
   .header-back {
     height: 78px;
-    width: 100%;
+    width: auto;
     background-position: 50% 0;
     background-repeat:  no-repeat;
   }
