fixing aspect ratio

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2512,8 +2512,8 @@ body {
     height: auto;
   }
   .header-back {
-    height: 78px;
-    width: auto;
+    height: 0;
+    padding-top: 10%;
     background-position: 50% 0;
     background-repeat:  no-repeat;
   }
@@ -2524,7 +2524,7 @@ body {
     z-index: 10;
   }
   .carousel .item {
-    height: 78px;
+    height: 0;
     background-color: #777;
   }
   .carousel-inner > .item > img {
@@ -2532,7 +2532,6 @@ body {
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 78px;
   }
   .carousel-fade {
     .carousel-inner {
