moving links background image css to container

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2662,8 +2662,7 @@ body {
     background-color: $link-color;
     background-image: url(../assets/img/landing/avatar_all.png);
   }
-  .contact {
-    width: auto;
+  .contact-area {
     background-image: url(../assets/img/landing/word_map.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
