--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -1,4 +1,4 @@
-<div class="container" id="i18_link">
+<div class="container contact-area" id="i18_link">
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
