--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -11,6 +11,7 @@
 
   <!-- favicon -->
   <link rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+  <link href="{{ "/static/css/head.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Google AdSense -->
   <!--
