--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
   </title>
   <!-- favicon -->
   <link rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+  <link href="{{ "/static/css/head.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Google AdSense -->
   <!--
