--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -1,3 +1,8 @@
+$link-color: #0064FA;
+$light-gray1: #e7eaec;
+$gray: #676a6c;
+$white: #fff;
+
 @media (min-width: 768px) {
   .landing-page {
     .navbar-wrapper {
