--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -343,7 +343,7 @@ body.canvas-menu .nav-header {
   background-color: $white;
 }
 
-.form-control:focus, .form-control:focus, .form-control:focus, .navbar-collapse, .navbar-form {
+.form-control:focus, .form-control:focus, .form-control:focus, .navbar-collapse, .form-inline {
   box-shadow: none;
 }
 
